# chuk-mcp-training

./: .env.example  .gitignore  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml
bootstrap/: colab_cell.py
crates/chuk-compute-wire/: Cargo.toml
crates/chuk-compute-wire/src/: blob.rs  capability.rs  constants.rs  ids.rs  job.rs  lib.rs  message.rs  telemetry.rs
crates/chuk-compute-wire/tests/: no_domain_vocabulary.rs
crates/chuk-compute-worker/: Cargo.toml
crates/chuk-compute-worker/src/: backoff.rs  capabilities.rs  constants.rs  executor.rs  httpclient.rs  inputs.rs  main.rs  metrics.rs  outbox.rs  procio.rs  sandbox.rs  selfupdate.rs  seq.rs  telemetry.rs
crates/chuk-compute-worker/tests/: no_domain_vocabulary.rs
crates/chuk-train-agent/: Cargo.toml
crates/chuk-train-agent/src/: codeunit.rs  executor.rs  hardware.rs  httpclient.rs  job.rs  main.rs  outputs.rs  procio.rs  train.rs
crates/chuk-train-controlplane/: Cargo.toml
crates/chuk-train-controlplane/src/: apikey.rs  archive.rs  auth.rs  budget.rs  codeunit.rs  config.rs  crypto.rs  dash.rs  datasets.rs  drive.rs  experiments.rs  fakehttp.rs  gate.rs  grant.rs  hub.rs  jobspec.rs  lease.rs  main.rs  sweep.rs  upload.rs  ws.rs
crates/chuk-train-controlplane/src/api/: access.rs  archive.rs  checkpoints.rs  leases.rs  mod.rs  runs.rs  system.rs
crates/chuk-train-controlplane/src/artifacts/: fs.rs  mod.rs  s3.rs
crates/chuk-train-controlplane/src/artifacts/s3/: tests.rs
crates/chuk-train-controlplane/src/dash/: app.js  dash.css  index.html
crates/chuk-train-controlplane/src/drive/: tests.rs
crates/chuk-train-controlplane/src/experiments/: tests.rs
crates/chuk-train-controlplane/src/hub/: connection.rs  control.rs  messages.rs  mirror.rs  mod.rs  schedule.rs  submit.rs  tests.rs
crates/chuk-train-controlplane/src/provider/: mock.rs  mod.rs  vast.rs
crates/chuk-train-controlplane/src/store/: ids.rs  mod.rs  postgres.rs  sqlite.rs
crates/chuk-train-controlplane/src/store/postgres/: auth.rs  checkpoints.rs  codeunits.rs  gates.rs  leases.rs  ledger.rs  logs.rs  metrics.rs  mod.rs  runs.rs  sweeps.rs  tokens.rs  workers.rs
crates/chuk-train-controlplane/src/store/sqlite/: auth.rs  checkpoints.rs  codeunits.rs  gates.rs  leases.rs  ledger.rs  logs.rs  metrics.rs  mod.rs  runs.rs  sweeps.rs  tokens.rs  workers.rs
crates/chuk-train-cp/: Cargo.toml
crates/chuk-train-cp/src/: api.rs  apikey.rs  archive.rs  codeunit.rs  config.rs  dash.rs  drive.rs  experiments.rs  grant.rs  hub.rs  jobspec.rs  lease.rs  main.rs  upload.rs  ws.rs
crates/chuk-train-cp/src/api/: access.rs  archive.rs  checkpoints.rs  leases.rs  mod.rs  runs.rs  system.rs
crates/chuk-train-cp/src/artifacts/: fs.rs  mod.rs  s3.rs
crates/chuk-train-cp/src/provider/: mock.rs  mod.rs  vast.rs
crates/chuk-train-cp/src/store/: mod.rs  postgres.rs  sqlite.rs
crates/chuk-train-proto/: Cargo.toml
crates/chuk-train-proto/src/: constants.rs  domain.rs  introspect.rs  keys.rs  lease.rs  lib.rs  manifest.rs  wire.rs
deploy/: Dockerfile  fly.toml
deploy/mcp/: Dockerfile  fly.toml
docs/: E0-colab.md
docs/specs/: chuk-compute-spec.md  chuk-introspect-spec.md  chuk-mcp-training-spec.md
examples/stub-trainer/: README.md  probe_plan.json  run.sh  train.py  unit.toml
examples/stub-trainer/configs/: demo.json  poisoned.json  stub.json
examples/v11-pretrain/: run.sh  train.py  unit.toml
examples/v11-pretrain/configs/: pretrain.json
introspect/: pyproject.toml
introspect/src/chuk_introspect/: __init__.py  constants.py  emit.py  introspector.py  plan.py  pulse.py
introspect/tests/: test_plan_and_keys.py  test_pulse.py
mcp/: pyproject.toml
mcp/src/chuk_train_mcp/: __init__.py  auth.py  client.py  constants.py  models.py  server.py
scripts/: authorize-drive.py  check_coverage.py  demo.sh  install.sh
