[workspace]
resolver = "2"
members = [
    "crates/chuk-train-proto",
    "crates/chuk-train-cp",
    "crates/chuk-train-agent",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
chuk-train-proto = { path = "crates/chuk-train-proto" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
axum = { version = "0.8", features = ["ws"] }

[profile.release]
lto = true
strip = true
