[package]
name = "chuk-compute-worker"
description = "chuk-compute worker: dials out to the control plane, advertises its capabilities, and executes assigned jobs generically"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "chuk-compute-worker"
path = "src/main.rs"

[dependencies]
chuk-compute-wire = { workspace = true }
chuk-datasets-client = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
hex = "0.4"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }
serde_json = { workspace = true }
sha2 = "0.10"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
tar = "0.4"
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zstd = "0.13"
