[package]
name = "chuk-train-agent"
description = "chuk-train worker agent: dials out to the control plane, registers hardware, executes assigned runs"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "chuk-train-agent"
path = "src/main.rs"

[dependencies]
chuk-train-proto = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots"] }
serde_json = { workspace = true }
sha2 = "0.10"
tar = "0.4"
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zstd = "0.13"
