[package]
name = "chuk-train-agent"
description = "chuk-compute worker: dials out to the control plane, advertises its capabilities, and executes assigned jobs generically"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "chuk-train-agent"
path = "src/main.rs"

[dependencies]
chuk-compute-wire = { workspace = true }
# Kept only for a few generic, domain-free constants (heartbeat interval,
# reconnect backoff, exit codes, output-scan interval) during the M1 transition.
chuk-train-proto = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }
serde_json = { workspace = true }
sha2 = "0.10"
tar = "0.4"
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zstd = "0.13"
