[package]
name = "chuk-train-controlplane"
description = "chuk-mcp-training control plane daemon: agent websocket, scheduler, run + artifact store, REST API, dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "chuk-train-controlplane"
path = "src/main.rs"

[dependencies]
chuk-compute-wire = { workspace = true }
chuk-train-proto = { workspace = true }
aes-gcm = "0.10"
anyhow = { workspace = true }
async-trait = "0.1"
aws-sdk-s3 = "1"
aws-smithy-types = "1"
axum = { workspace = true }
base64 = "0.22"
dotenvy = "0.15"
hmac = "0.12"
futures-util = { workspace = true }
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
sqlx = { workspace = true }
tar = "0.4"
tokio = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
zstd = "0.13"
